# haskell

./: .travis.yml  NOTES.txt  stack.yaml
docs/haddock/: doc-index-47.html  doc-index-58.html  doc-index-92.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Z.html  doc-index.html
docs/haddock/tensorflow-0.1.0.0/: TensorFlow-Build.html  TensorFlow-BuildOp.html  TensorFlow-Core.html  TensorFlow-Output.html  TensorFlow-Session.html  TensorFlow-Tensor.html  TensorFlow-Types.html  doc-index-47.html  doc-index-58.html  doc-index-92.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  (+13 more)
tensorflow/: tensorflow.cabal
tensorflow-core-ops/: tensorflow-core-ops.cabal
tensorflow-flow/: tensorflow-flow.cabal
tensorflow-flow/src/TensorFlow/: Flow.hs
tensorflow-flow/tests/: FlowTest.hs
tensorflow-ops/: tensorflow-ops.cabal
tensorflow-ops/tests/: ArrayOpsTest.hs  BuildTest.hs  DataFlowOpsTest.hs  EmbeddingOpsTest.hs  OpsTest.hs  RegressionTest.hs
(+47 files in other folders)
