name:                tensorflow-flow
version:             0.1.0.0
synopsis:            A stateful monad for TensorFlow.
description:         Please see README.md
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:   src
  exposed-modules: TensorFlow.Flow
  build-depends:  base >= 4.7 && < 5
                , data-default
                , lens-family
                , containers
                , mtl
                , tensorflow == 0.1.*
                , tensorflow-proto == 0.1.*
                , tensorflow-core-ops == 0.1.*
                , tensorflow-ops == 0.1.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
